--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,6 @@ android {
         }
     }
 
-    dataBinding{
-        enabled = true
-    }
 
     buildFeatures{
         dataBinding true
@@ -47,9 +44,10 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    //fireBase Libraries
-    implementation platform('com.google.firebase:firebase-bom:26.3.0')
-    implementation 'com.google.firebase:firebase-auth'
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation 'com.google.firebase:firebase-analytics'
+
 
     //recaptcha library
     implementation "androidx.browser:browser:1.3.0"
@@ -59,11 +57,17 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
 
     testImplementation 'junit:junit:4.+'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //country code
+    implementation 'com.hbb20:ccp:2.4.0'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
